--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
-name = "rustide"
+name = "rustwhitehat"
 version = "0.1.0"
 edition = "2021"
+description = "example project to learn Rust"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -23,3 +24,10 @@ rayon = "1.5"
 tokio-stream = "0.1"
 tokio = { version = "1", features = ["full"] }
 futures = "0.3"
+
+log = "0.4"
+env_logger = "0.9"
+async-trait = "0.1"
+clap = { version = "3.1", features = ["cargo"] }
+regex = "1"
+url = "2"
